--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -79,6 +79,7 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Configuration\HandlerChainTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StandinTester.cs" />
   </ItemGroup>
