initial implementation of HandlerCall

--- a/ripple.config
+++ b/ripple.config
@@ -13,7 +13,11 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
-    <Dependency Name="FubuTestingSupport" Version="1.1.0.249" Mode="Float" />
+    <Dependency Name="Bottles" Version="1.1.0.522" Mode="Float" />
+    <Dependency Name="FubuCore" Version="1.1.0.254" Mode="Float" />
+    <Dependency Name="FubuMVC.Core" Version="1.1.0.1529" Mode="Float" />
+    <Dependency Name="FubuTestingSupport" Version="1.1.0.254" Mode="Float" />
+    <Dependency Name="HtmlTags" Version="2.0.0.172" Mode="Float" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="3.6.1" Mode="Fixed" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
