--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -79,9 +79,11 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Configuration\HandlerCallTester.cs" />
     <Compile Include="Configuration\HandlerChainTester.cs" />
+    <Compile Include="FakeHandlers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Runtime\CascadingActionInvokerTester.cs" />
+    <Compile Include="Runtime\CascadingHandlerInvokerTester.cs" />
     <Compile Include="Runtime\SimpleHandlerInvokerTester.cs" />
     <Compile Include="StandinTester.cs" />
   </ItemGroup>
