--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Configuration\ConfigurationClasses.cs" />
     <Compile Include="Configuration\HandlerCall.cs" />
     <Compile Include="Configuration\HandlerChain.cs" />
+    <Compile Include="Configuration\HandlerGraph.cs" />
     <Compile Include="IServiceBus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\CascadingHandlerInvoker.cs" />
