FubuTransport bootstrapping is working for the most basic cases

--- a/ripple.config
+++ b/ripple.config
@@ -16,6 +16,7 @@
     <Dependency Name="Bottles" Version="1.1.0.522" Mode="Float" />
     <Dependency Name="FubuCore" Version="1.1.0.254" Mode="Float" />
     <Dependency Name="FubuMVC.Core" Version="1.1.0.1529" Mode="Float" />
+    <Dependency Name="FubuMVC.StructureMap" Version="1.1.0.1533" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.1.0.254" Mode="Float" />
     <Dependency Name="HtmlTags" Version="2.0.0.172" Mode="Float" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
