--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -58,10 +58,14 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Configuration\ConfigurationClasses.cs" />
+    <Compile Include="Configuration\FubuTransport.cs" />
+    <Compile Include="Configuration\FubuTransportRegistry.cs" />
     <Compile Include="Configuration\HandlerCall.cs" />
     <Compile Include="Configuration\HandlerChain.cs" />
     <Compile Include="Configuration\HandlerGraph.cs" />
+    <Compile Include="Configuration\HandlerSource.cs" />
+    <Compile Include="Configuration\IHandlerSource.cs" />
+    <Compile Include="FubuTransportationExtensions.cs" />
     <Compile Include="IServiceBus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\CascadingHandlerInvoker.cs" />
