--- a/ripple.config
+++ b/ripple.config
@@ -14,12 +14,16 @@
   </Feeds>
   <Nugets>
     <Dependency Name="Bottles" Version="1.1.0.522" Mode="Float" />
+    <Dependency Name="Common.Logging" Version="2.1.1" Mode="Fixed" />
     <Dependency Name="FubuCore" Version="1.1.0.254" Mode="Float" />
     <Dependency Name="FubuMVC.Core" Version="1.1.0.1534" Mode="Float" />
     <Dependency Name="FubuMVC.StructureMap" Version="1.1.0.1534" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.1.0.254" Mode="Float" />
     <Dependency Name="HtmlTags" Version="2.0.0.172" Mode="Float" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
+    <Dependency Name="PowerThreading" Version="20101026.0" Mode="Fixed" />
+    <Dependency Name="Rhino.Queues" Version="2.1.0.0" Mode="Float" />
+    <Dependency Name="Rhino.ServiceBus.References" Version="3.1.1.0" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="3.6.1" Mode="Fixed" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
