--- a/src/FubuTransportation.RhinoQueues/FubuTransportation.RhinoQueues.csproj
+++ b/src/FubuTransportation.RhinoQueues/FubuTransportation.RhinoQueues.csproj
@@ -66,10 +66,10 @@
     </Compile>
     <Compile Include="PersistantQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RhinoQueuesEnvelope.cs" />
     <Compile Include="RhinoQueuesExtension.cs" />
     <Compile Include="RhinoQueuesSettings.cs" />
     <Compile Include="RhinoQueuesTransport.cs" />
+    <Compile Include="TransactionCallback.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FubuTransportation\FubuTransportation.csproj">
