doing some file refactorings of the runtime interfaces

--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -72,7 +72,9 @@
     <Compile Include="Runtime\BatchHandler.cs" />
     <Compile Include="Runtime\CascadingHandlerInvoker.cs" />
     <Compile Include="Runtime\Envelope.cs" />
+    <Compile Include="Runtime\IMessageCallback.cs" />
     <Compile Include="Runtime\IMessageInvoker.cs" />
+    <Compile Include="Runtime\IMessageSerializer.cs" />
     <Compile Include="Runtime\ITransport.cs" />
     <Compile Include="Runtime\MessageInvoker.cs" />
     <Compile Include="Runtime\Receiver.cs" />
