--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -69,9 +69,12 @@
     <Compile Include="FubuTransportationExtensions.cs" />
     <Compile Include="IServiceBus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Runtime\BasicJsonMessageSerializer.cs" />
     <Compile Include="Runtime\BatchHandler.cs" />
+    <Compile Include="Runtime\BinarySerializer.cs" />
     <Compile Include="Runtime\CascadingHandlerInvoker.cs" />
     <Compile Include="Runtime\Envelope.cs" />
+    <Compile Include="Runtime\EnvelopeSerializer.cs" />
     <Compile Include="Runtime\IMessageCallback.cs" />
     <Compile Include="Runtime\IMessageInvoker.cs" />
     <Compile Include="Runtime\IMessageSerializer.cs" />
