--- a/src/FubuTransportation.RhinoQueues.Testing/FubuTransportation.RhinoQueues.Testing.csproj
+++ b/src/FubuTransportation.RhinoQueues.Testing/FubuTransportation.RhinoQueues.Testing.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FubuTransportation.RhinoQueues.Testing</RootNamespace>
     <AssemblyName>FubuTransportation.RhinoQueues.Testing</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -98,6 +99,7 @@
     <Compile Include="RhinoQueuesIntegrationTester.cs" />
     <Compile Include="RhinoQueuesServiceRegistry_spec.cs" />
     <Compile Include="RhinoUriTester.cs" />
+    <Compile Include="StubReceiver.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FubuTransportation.RhinoQueues\FubuTransportation.RhinoQueues.csproj">
