--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Runtime\Routing\IRoutingRule.cs" />
     <Compile Include="Runtime\Routing\LambdaRoutingRule.cs" />
     <Compile Include="Runtime\Routing\NamespaceRule.cs" />
+    <Compile Include="Runtime\Routing\SingleTypeRoutingRule.cs" />
     <Compile Include="Runtime\RuntimeClasses.cs" />
     <Compile Include="Runtime\SimpleHandlerInvoker.cs" />
     <Compile Include="Runtime\XmlMessageSerializer.cs" />
