--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Configuration\ChannelNode.cs" />
     <Compile Include="Runtime\Envelope.cs" />
     <Compile Include="Runtime\EnvelopeSerializer.cs" />
+    <Compile Include="Runtime\IChannel.cs" />
     <Compile Include="Runtime\IMessageCallback.cs" />
     <Compile Include="Runtime\IMessageInvoker.cs" />
     <Compile Include="Runtime\IMessageSerializer.cs" />
