--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -68,7 +68,10 @@
     <Compile Include="Configuration\HandlerSource.cs" />
     <Compile Include="Configuration\IHandlerSource.cs" />
     <Compile Include="FubuTransportationExtensions.cs" />
-    <Compile Include="InMemory\Classes.cs" />
+    <Compile Include="InMemory\InMemoryQueueManager.cs" />
+    <Compile Include="InMemory\InMemoryChannel.cs" />
+    <Compile Include="InMemory\InMemoryQueue.cs" />
+    <Compile Include="InMemory\InMemoryTransport.cs" />
     <Compile Include="IServiceBus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\BasicJsonMessageSerializer.cs" />
