in prep for testing scenarios, quick way to convert a settings object to all in-memory

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Configuration\HandlerSourceTester.cs" />
     <Compile Include="FakeHandlers.cs" />
     <Compile Include="InMemory\InMemoryQueueIntegrationTester.cs" />
+    <Compile Include="InMemory\InMemoryTransportTester.cs" />
     <Compile Include="IntegratedFubuTransportRegistryTester.cs" />
     <Compile Include="FubuTransportServiceRegistry_spec.cs" />
     <Compile Include="FullStackConfigurationIntegrationTester.cs" />
