IRoutingRule.Describe() and all its implementations

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -118,6 +118,7 @@
     <Compile Include="TestSupport\FourHandler.cs" />
     <Compile Include="TestSupport\FourMessage.cs" />
     <Compile Include="TestSupport\HarnessSettings.cs" />
+    <Compile Include="TestSupport\IScenarioWriter.cs" />
     <Compile Include="TestSupport\ManyResponseHandler.cs" />
     <Compile Include="TestSupport\Message.cs" />
     <Compile Include="TestSupport\MessageProcessed.cs" />
