--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Runtime\simplest_possible_invocation.cs" />
     <Compile Include="Runtime\InvocationContext.cs" />
     <Compile Include="Runtime\SimpleHandlerInvokerTester.cs" />
+    <Compile Include="ScenarioWriterSmokeTester.cs" />
     <Compile Include="TestSupport\AnotherOneHandler.cs" />
     <Compile Include="TestSupport\DifferentOneHandler.cs" />
     <Compile Include="TestSupport\FourHandler.cs" />
