handling the case of an unrecognized content-type in serialization

--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Runtime\Routing\SingleTypeRoutingRule.cs" />
     <Compile Include="Runtime\RuntimeClasses.cs" />
     <Compile Include="Runtime\SimpleHandlerInvoker.cs" />
+    <Compile Include="Runtime\UnknownContentTypeException.cs" />
     <Compile Include="Runtime\XmlMessageSerializer.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="TransportActivator.cs" />
