added the new IHeaders interface

--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -80,15 +80,19 @@
     <Compile Include="Runtime\BinarySerializer.cs" />
     <Compile Include="Runtime\CascadingHandlerInvoker.cs" />
     <Compile Include="Configuration\ChannelNode.cs" />
+    <Compile Include="Runtime\DictionaryHeaders.cs" />
     <Compile Include="Runtime\Envelope.cs" />
     <Compile Include="Runtime\EnvelopeSerializer.cs" />
+    <Compile Include="Runtime\HeadersExtension.cs" />
     <Compile Include="Runtime\IChannel.cs" />
+    <Compile Include="Runtime\IHeaders.cs" />
     <Compile Include="Runtime\IMessageCallback.cs" />
     <Compile Include="Runtime\IMessageInvoker.cs" />
     <Compile Include="Runtime\IMessageSerializer.cs" />
     <Compile Include="Runtime\IReceiver.cs" />
     <Compile Include="Runtime\ITransport.cs" />
     <Compile Include="Runtime\MessageInvoker.cs" />
+    <Compile Include="Runtime\NameValueHeaders.cs" />
     <Compile Include="Runtime\Receiver.cs" />
     <Compile Include="Runtime\Routing\AssemblyRule.cs" />
     <Compile Include="Runtime\Routing\IRoutingRule.cs" />
