--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Runtime\CascadingHandlerInvokerTester.cs" />
     <Compile Include="Runtime\EnvelopeSerializerIntegratedTester.cs" />
     <Compile Include="Runtime\EnvelopeSerializerTester.cs" />
+    <Compile Include="Runtime\EventAggregatorTester.cs" />
     <Compile Include="Runtime\generic_handlers_are_called_for_messages_that_match.cs" />
     <Compile Include="Runtime\handling_a_batch_of_messages.cs" />
     <Compile Include="Runtime\Headers_testing.cs" />
